--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
@@ -26,5 +26,8 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Compile
-        run: npx hardhat compile
+      - name: Build
+        run: npm run build
+
+      - name: Test
+        run: npm test
