--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,14 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "22.10.0"
-          cache: "npm"
+          node-version: '22.10.0'
+          cache: 'npm'
 
       - name: Install
         run: npm ci
+
+      - name: Format check
+        run: npm run format:check
 
       - name: Build
         run: npm run build
