--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "hardhat compile",
     "test": "hardhat test",
     "format": "prettier . --write",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia"
   },
   "keywords": [],
   "author": "",
