--- a/.github/workflows/deploy-sepolia.yml
+++ b/.github/workflows/deploy-sepolia.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "22.10.0"
-          cache: "npm"
+          node-version: '22.10.0'
+          cache: 'npm'
 
       - name: Install
         run: npm ci
